--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doob-next",
+  "name": "Creatorsmela",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-modal-video": "^2.0.2",
