--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/react": "^2.6.8",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.0.2",
     "chart.js": "^4.4.7",
     "disqus-react": "^1.1.5",
