updated contact page

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
+    "@dotlottie/player-component": "^2.7.12",
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/dotlottie-react": "^0.12.2",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
     "@nextui-org/progress": "^2.2.4",
