updated contact page

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nextui-org/react": "^2.6.8",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.0.2",
     "chart.js": "^4.4.7",
